# sbpc

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASE.md
.github/workflows/: release.yml  rust.yml  sbpc_test_data.yml  test_example.yml  version-check.yml
src/: bam.rs  bayesian.rs  cli.rs  genome.rs  lib.rs  main.rs  metrics.rs  peak_caller.rs  utils.rs
tests/: bam_tests.rs  bayesian_extra_tests.rs  bayesian_tests.rs  genome_extra_tests.rs  genome_tests.rs  metrics_tests.rs
tests/data/: debug_peak_detection.py  generate_test_data.py
